fix (app): added css to prevent vertical scrolling on mobile devices

--- a/src/ui/src/app/app.component.scss
+++ b/src/ui/src/app/app.component.scss
@@ -1,4 +1,10 @@
 
+.viewport{
+     height:auto;
+    max-height:150%;
+    overflow:auto;
+}
+
 .app {
   text-align: center;
   overflow-y:hidden;
